--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "classnames": "^2.2.5",
     "material-ui": "^0.20.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
